# General-Purpose-Agent_DASALL

./: .clang-format  .editorconfig  .gitignore  .gitmessage.txt  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  commit_msg.txt
access/: CMakeLists.txt
access/include/: AccessErrors.h  AccessGatewayFactory.h  AccessTypes.h  IAccessGateway.h  IAccessRuntimeBridge.h  IAdmissionController.h  IProtocolAdapter.h
access/include/daemon/: DaemonEndpointDefaults.h  DaemonFrameCodec.h  DaemonHealthTypes.h  DaemonProtocolAdapter.h  DaemonProtocolTypes.h  DaemonResponseBuilderWithReceipt.h  DaemonTaskQueryHandler.h
access/src/: AccessConfigAdapter.cpp  AccessConfigAdapter.h  AccessGateway.cpp  AccessGateway.h  AccessGatewayFactory.cpp  AccessIdGenerator.cpp  AccessIdGenerator.h  AccessObservabilityBridge.cpp  AccessObservabilityBridge.h  AccessPolicyGate.cpp  AccessPolicyGate.h  AccessSemanticKinds.h  AdmissionController.cpp  AdmissionController.h  AsyncTaskRegistry.cpp  AsyncTaskRegistry.h  AuthenticatorChain.cpp  AuthenticatorChain.h  ProtocolAdapterRegistry.cpp  ProtocolAdapterRegistry.h  ProtocolErrorMapper.cpp  ProtocolErrorMapper.h  RequestNormalizer.cpp  RequestNormalizer.h  RequestValidator.cpp  RequestValidator.h  ResultPublisher.cpp  ResultPublisher.h  ResultReplayCache.cpp  ResultReplayCache.h  RuntimeBridge.cpp  RuntimeBridge.h  SubjectResolver.cpp  SubjectResolver.h  placeholder.cpp
access/src/daemon/: DaemonDiagnosticsHandler.cpp  DaemonDiagnosticsHandler.h  DaemonFrameCodec.cpp  DaemonHealthService.cpp  DaemonHealthService.h  DaemonProtocolAdapter.cpp  DaemonResponseBuilderWithReceipt.cpp  DaemonTaskQueryHandler.cpp  TuiIpcProtocolAdapter.cpp  TuiIpcProtocolAdapter.h
apps/: CMakeLists.txt
apps/cli/: CMakeLists.txt
apps/cli/src/: CliAccessErrorProjection.h  CliCommandParser.cpp  CliCommandParser.h  CliExitDecision.cpp  CliExitDecision.h  CliIpcClient.cpp  CliIpcClient.h  CliOutputFormatter.cpp  main.cpp  (+3 more)
apps/daemon/: CMakeLists.txt
apps/gateway/: CMakeLists.txt
apps/runtime_support/: CMakeLists.txt
apps/simulator/: CMakeLists.txt
apps/tui/: CMakeLists.txt
cognition/: CMakeLists.txt
cognition/include/: CognitionConfig.h  CognitionDependencies.h  CognitionTypes.h  ICognitionEngine.h  IPlanner.h  IReasoner.h  IReflectionEngine.h  IResponseBuilder.h
cognition/src/: CognitionFacade.cpp  StagePolicyResolver.cpp  StagePolicyResolver.h
infra/: CMakeLists.txt
infra/include/: AuditEvent.h  HealthSnapshot.h  IHealthMonitor.h  IInfrastructureService.h  ILogger.h  IOTAManager.h  ISecretManager.h  InfraContext.h  InfraErrorCode.h  LogEvent.h  ObservabilityLiveComposition.h
infra/src/: InfraErrorCode.cpp  InfraServiceFacade.cpp  ObservabilityLiveComposition.cpp
knowledge/: CMakeLists.txt
knowledge/include/: IKnowledgeService.h  KnowledgeErrors.h  KnowledgeServiceFactory.h  KnowledgeTypes.h
knowledge/src/: KnowledgeBuildSkeleton.cpp  KnowledgeServiceFactory.cpp
llm/: CMakeLists.txt
llm/include/: HealthStatus.h  ILLMAdapter.h  ILLMManager.h  ILLMTransport.h  LLMAdapterConfig.h  LLMGenerateRequest.h  LLMManagerResult.h  LLMProductionFactory.h  LLMSubsystemConfig.h  NormalizedUsageRecord.h  TokenEstimate.h
llm/src/: LLMManager.cpp  LLMManager.h  LLMProductionFactory.cpp  LLMSubsystemConfig.cpp  TokenEstimator.cpp  TokenEstimator.h  UsageAggregator.cpp  UsageAggregator.h
memory/: CMakeLists.txt
memory/include/: IContextOrchestrator.h  IExperienceStore.h  IFactStore.h  IMaintenanceStore.h  IMemoryManager.h  IMemoryStore.h  ISessionStore.h  IStoreTransaction.h  ISummarizer.h  ISummaryStore.h  ITransactionalStore.h  MaintenanceReport.h  MaintenanceRequest.h  MemoryDependencies.h
memory/src/: MemoryBuildSkeleton.cpp  MemoryManager.cpp  MemoryManagerFactory.cpp  MemoryManagerInternal.h
multi_agent/: CMakeLists.txt
multi_agent/include/: IMultiAgentCoordinator.h  MultiAgentRuntimeFold.h  MultiAgentTypes.h
multi_agent/src/: MultiAgentCoordinator.cpp  MultiAgentRuntimeFold.cpp  placeholder.cpp
platform/: CMakeLists.txt
platform/include/: IDynamicLibraryLoader.h  IFileSystem.h  IIPC.h  INetwork.h  IQueue.h  IThread.h  ITimer.h  PlatformError.h  PlatformResult.h
profiles/: CMakeLists.txt
profiles/cloud_full/: profile.cmake  runtime_policy.yaml
profiles/desktop_full/: profile.cmake  runtime_policy.yaml
profiles/edge_balanced/: profile.cmake  runtime_policy.yaml
profiles/edge_minimal/: profile.cmake  runtime_policy.yaml
profiles/factory_test/: profile.cmake  runtime_policy.yaml
profiles/include/: BuildProfileManifest.h  BuildProfileResolver.h  DaemonProfileProjection.h  ILastKnownGoodStore.h  IProfileCatalog.h  LastKnownGoodStore.h  ProfileCatalog.h  ProfileCompatibilityValidator.h  ProfileError.h  ProfileOverlayComposer.h  ProfileTelemetryAdapter.h  RuntimePolicyProvider.h  RuntimePolicySnapshot.h  ValidationReport.h
profiles/src/: BuildProfileResolver.cpp  DaemonProfileProjection.cpp  LastKnownGoodStore.cpp  ProfileCatalog.cpp  ProfileCompatibilityValidator.cpp  ProfileOverlayComposer.cpp  ProfileTelemetryAdapter.cpp  ProfileYamlParser.cpp  ProfileYamlParser.h  RuntimePolicyProvider.cpp  placeholder.cpp
runtime/: CMakeLists.txt
runtime/include/: AgentFacade.h  AgentTypes.h  CancellationToken.h  IAgent.h  RuntimeDependencySet.h  RuntimeErrorCode.h
runtime/src/: AgentFacade.cpp  AgentOrchestrator.cpp  AgentOrchestrator.h  KnowledgeEvidenceProjector.cpp  KnowledgeEvidenceProjector.h
services/: CMakeLists.txt
services/include/: IDataService.h  IExecutionService.h  ServiceLiveComposition.h  ServiceTypes.h
services/src/: ServiceContextBuilder.cpp  ServiceContextBuilder.h  ServiceFacade.cpp  ServiceFacade.h  ServiceLiveComposition.cpp
tests/: CMakeLists.txt  VerifySystemGateDiscoverability.cmake
tests/contract/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/mocks/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tools/: CMakeLists.txt
tools/include/: ICapabilityCache.h  IPolicyGate.h  ITool.h  IToolManager.h  ToolInvocationContext.h  ToolInvocationEnvelope.h
tools/src/: ToolManager.cpp  ToolManager.h
(+3090 files in other folders)
