cmake_minimum_required(VERSION 3.16)
project(DASALL_OS VERSION 0.1.0 LANGUAGES CXX)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
include(DASALLOptions)
include(DASALLThirdParty)
include(GNUInstallDirs)

if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT OR CMAKE_INSTALL_PREFIX STREQUAL "/usr/local")
  set(CMAKE_INSTALL_PREFIX "/usr" CACHE PATH "Install path prefix." FORCE)
endif()

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

option(DASALL_ENABLE_TESTS "Enable DASALL tests" ON)

set(DASALL_INSTALL_BINDIR "${CMAKE_INSTALL_BINDIR}")
set(DASALL_INSTALL_SBINDIR "${CMAKE_INSTALL_SBINDIR}")
set(DASALL_INSTALL_LIBDIR "${CMAKE_INSTALL_LIBDIR}")
set(DASALL_INSTALL_INCLUDEDIR "${CMAKE_INSTALL_INCLUDEDIR}")
set(DASALL_INSTALL_DASALL_DATADIR "${CMAKE_INSTALL_DATADIR}/dasall")
set(DASALL_INSTALL_PROFILESDIR "${DASALL_INSTALL_DASALL_DATADIR}/profiles")
set(DASALL_INSTALL_LLM_DATADIR "${DASALL_INSTALL_DASALL_DATADIR}/llm")

message(STATUS "DASALL dependency priority: submodule > local cache > FetchContent")
message(STATUS "DASALL local dependency cache: ${DASALL_THIRD_PARTY_CACHE_DIR}")

add_subdirectory(contracts)
add_subdirectory(runtime)
add_subdirectory(cognition)
add_subdirectory(llm)
add_subdirectory(tools)
add_subdirectory(memory)
add_subdirectory(knowledge)
add_subdirectory(services)
add_subdirectory(multi_agent)
add_subdirectory(platform)
add_subdirectory(infra)
add_subdirectory(profiles)
add_subdirectory(access)
add_subdirectory(apps)

if(DASALL_ENABLE_TESTS)
  include(CTest)
  enable_testing()
  add_subdirectory(tests)
endif()
