set(DASALL_INFRA_CORE_SOURCES
  src/InfraErrorCode.cpp
  src/InfraServiceFacade.cpp
  src/config/ConfigCenterFacade.cpp
  src/config/ConfigPublisher.cpp
  src/config/ConfigLoader.cpp
  src/config/ConfigMerger.cpp
  src/config/ConfigValidator.cpp
  src/config/ConfigSnapshotStore.cpp
  src/plugin/PluginManager.cpp
)

set(DASALL_INFRA_AUDIT_SOURCES
  src/audit/AuditExporter.cpp
  src/audit/AuditMetricsBridge.cpp
  src/audit/AuditFallbackPipeline.cpp
  src/audit/AuditPipeline.cpp
  src/audit/AuditValidator.cpp
  src/audit/AuditService.cpp
)

set(DASALL_INFRA_TRACING_SOURCES
  src/tracing/TracingModuleAnchor.cpp
  src/tracing/TracerProviderImpl.cpp
  src/tracing/TracerProviderImpl.h
  src/tracing/TraceMetricsBridge.cpp
  src/tracing/TraceMetricsBridge.h
  src/tracing/TraceAuditBridge.cpp
  src/tracing/TraceAuditBridge.h
  src/tracing/SamplingPolicyEngine.cpp
  src/tracing/SamplingPolicyEngine.h
  src/tracing/TracerImpl.cpp
  src/tracing/TracerImpl.h
  src/tracing/SpanImpl.cpp
  src/tracing/SpanImpl.h
  src/tracing/ContextPropagationAdapter.cpp
  src/tracing/ContextPropagationAdapter.h
  src/tracing/BatchSpanBuffer.cpp
  src/tracing/BatchSpanBuffer.h
  src/tracing/SpanExporterAdapter.cpp
  src/tracing/SpanExporterAdapter.h
  src/tracing/SpanProcessorPipeline.cpp
  src/tracing/SpanProcessorPipeline.h
  src/tracing/TraceHealthProbe.cpp
  src/tracing/TraceHealthProbe.h
)

set(DASALL_INFRA_METRICS_SOURCES
  src/metrics/MetricsFacade.cpp
  src/metrics/InstrumentRegistry.cpp
  src/metrics/AggregationEngine.cpp
  src/metrics/CardinalityGuard.cpp
  src/metrics/MetricsConfigPolicy.cpp
  src/metrics/MetricReaderScheduler.cpp
  src/metrics/MetricsExporterAdapter.cpp
  src/metrics/MetricsRecovery.cpp
  src/metrics/MetricsLoggingBridge.cpp
  src/metrics/MetricsAuditBridge.cpp
)

set(DASALL_INFRA_METRICS_PRIVATE_HEADERS
  src/metrics/MetricsFacade.h
  src/metrics/InstrumentRegistry.h
  src/metrics/AggregationEngine.h
  src/metrics/CardinalityGuard.h
  src/metrics/MetricsConfigPolicy.h
  src/metrics/MetricReaderScheduler.h
  src/metrics/MetricsExporterAdapter.h
  src/metrics/MetricsRecovery.h
  src/metrics/MetricsBridgeEvent.h
  src/metrics/MetricsLoggingBridge.h
  src/metrics/MetricsAuditBridge.h
)

set(DASALL_INFRA_LOGGING_SOURCES
  src/logging/AsyncQueueController.cpp
  src/logging/AuditLinkAdapter.cpp
  src/logging/LoggingConfigAdapter.cpp
  src/logging/LoggingFacade.cpp
  src/logging/LoggingHealthProbe.cpp
  src/logging/LogQueryService.cpp
  src/logging/LoggingMetricsBridge.cpp
  src/logging/LoggingRecovery.cpp
  src/logging/SinkDispatcher.cpp
)

set(DASALL_INFRA_SECRET_SOURCES
  src/secret/SecretAuditBridge.cpp
  src/secret/SecretHealthProbe.cpp
  src/secret/SecretManagerFacade.cpp
  src/secret/SecretLeaseRegistry.cpp
  src/secret/SecretRotationCoordinator.cpp
  src/secret/backends/MockSecretBackend.cpp
  src/secret/backends/FileSecretBackend.cpp
)

set(DASALL_INFRA_SECRET_PUBLIC_HEADERS
  include/secret/ISecretBackend.h
  include/secret/ISecretManager.h
  include/secret/ISecretHealthSource.h
  include/secret/SecureBuffer.h
  include/secret/SecretErrors.h
  include/secret/SecretTypes.h
)

set(DASALL_INFRA_SECRET_PRIVATE_HEADERS
  src/secret/SecretAuditBridge.h
  src/secret/SecretHealthProbe.h
  src/secret/SecretLeaseRegistry.h
  src/secret/SecretManagerFacade.h
  src/secret/SecretRotationCoordinator.h
  src/secret/SecretRotationValidator.h
  src/secret/backends/FileSecretBackend.h
  src/secret/backends/MockSecretBackend.h
)

set(DASALL_INFRA_HEALTH_SOURCES
  src/health/HealthMonitorFacade.cpp
  src/health/ProbeRegistry.cpp
  src/health/ProbeExecutor.cpp
  src/health/HealthEvaluator.cpp
  src/health/RecoveryHintEmitter.cpp
)

set(DASALL_INFRA_HEALTH_PRIVATE_HEADERS
  src/health/HealthMonitorFacade.h
  src/health/ProbeRegistry.h
  src/health/ProbeExecutor.h
  src/health/HealthEvaluator.h
  src/health/RecoveryHintEmitter.h
)

set(DASALL_INFRA_POLICY_SOURCES
  src/policy/PolicyAuditBridge.cpp
  src/policy/PolicyHealthProbe.cpp
  src/policy/PolicyMetricsBridge.cpp
  src/policy/PolicyDecisionProjector.cpp
  src/policy/PolicyConflictResolver.cpp
  src/policy/PolicyLoader.cpp
  src/policy/PolicySchemaValidator.cpp
  src/policy/SecurityPolicyManager.cpp
  src/policy/PolicySnapshotStore.cpp
)

set(DASALL_INFRA_POLICY_PRIVATE_HEADERS
  src/policy/PolicyAuditBridge.h
  src/policy/PolicyHealthProbe.h
  src/policy/PolicyMetricsBridge.h
  src/policy/PolicyDecisionProjector.h
  src/policy/PolicyConflictResolver.h
  src/policy/PolicyLoader.h
  src/policy/PolicySchemaValidator.h
  src/policy/SecurityPolicyManager.h
  src/policy/PolicySnapshotStore.h
)

set(DASALL_INFRA_DIAGNOSTICS_SOURCES
  src/diagnostics/CommandRegistry.cpp
  src/diagnostics/CommandPolicyGuard.cpp
  src/diagnostics/CommandExecutor.cpp
  src/diagnostics/EvidenceCollector.cpp
  src/diagnostics/SnapshotAssembler.cpp
  src/diagnostics/RedactionEngine.cpp
  src/diagnostics/DiagnosticsServiceFacade.cpp
)

set(DASALL_INFRA_DIAGNOSTICS_PRIVATE_HEADERS
  src/diagnostics/CommandRegistry.h
  src/diagnostics/CommandPolicyGuard.h
  src/diagnostics/CommandExecutor.h
  src/diagnostics/EvidenceCollector.h
  src/diagnostics/SnapshotAssembler.h
  src/diagnostics/RedactionEngine.h
  src/diagnostics/DiagnosticsServiceFacade.h
)

set(DASALL_INFRA_PUBLIC_HEADERS
  include/health/HealthErrors.h
  include/health/HealthStateTypes.h
  include/health/IHealthMonitor.h
  include/health/IHealthPolicy.h
  include/health/ProbeTypes.h
  include/health/RecoveryHint.h
  include/watchdog/IHeartbeatSource.h
  include/watchdog/ITimeoutPolicy.h
  include/watchdog/IWatchdogService.h
  include/watchdog/HeartbeatSample.h
  include/watchdog/RecoveryHintRequest.h
  include/watchdog/TimeoutDecision.h
  include/watchdog/WatchedEntityDescriptor.h
  include/watchdog/WatchdogSnapshot.h
  include/IInfrastructureService.h
  include/health/IHealthProbe.h
  include/diagnostics/IDiagnosticsCommandRegistry.h
  include/diagnostics/IDiagnosticsPolicyGuard.h
  include/diagnostics/IDiagnosticsService.h
  include/logging/IAuditLinkAdapter.h
  include/logging/ILogConfigurator.h
  include/logging/ILogger.h
  include/logging/LoggingErrors.h
  include/logging/LogTypes.h
  include/ota/IOTAManager.h
  ${DASALL_INFRA_SECRET_PUBLIC_HEADERS}
  include/InfraContext.h
  include/InfraErrorCode.h
  include/tracing/ITracerProvider.h
  include/tracing/ITracer.h
  include/tracing/ISpan.h
  include/tracing/ITraceContextPropagator.h
  include/tracing/TraceConfig.h
  include/tracing/TraceTypes.h
  include/tracing/TraceErrors.h
  include/metrics/IMetricConfigPolicy.h
  include/metrics/IMetricExporter.h
  include/metrics/IMeter.h
  include/metrics/MetricsErrors.h
  include/metrics/IMetricsHealthProbe.h
  include/metrics/IMetricsProvider.h
  include/metrics/MetricsSnapshots.h
  include/metrics/MetricTypes.h
  include/LogEvent.h
  include/config/ConfigTypes.h
  include/config/ConfigErrors.h
  include/config/IConfigCenter.h
  include/config/ConfigCenterFacade.h
  include/config/ConfigPublisher.h
  include/config/IConfigLoader.h
  include/config/ConfigLoader.h
  include/config/ConfigMerger.h
  include/config/IConfigValidator.h
  include/config/ConfigValidator.h
  include/config/IConfigSnapshotStore.h
  include/config/ConfigSnapshotStore.h
  include/config/IConfigPublisher.h
  include/diagnostics/DiagnosticsErrors.h
  include/diagnostics/DiagnosticsTypes.h
  include/ota/IBootControlAdapter.h
  include/ota/IInstallExecutor.h
  include/ota/IOTAPackageVerifier.h
  include/ota/OTATypes.h
  include/policy/IPolicyLoader.h
  include/policy/IPolicySchemaValidator.h
  include/policy/IPolicySnapshotStore.h
  include/policy/ISecurityPolicyManager.h
  include/policy/PolicyErrors.h
  include/policy/PolicyTypes.h
  include/policy/PolicyBundle.h
  include/policy/PolicyDecisionRef.h
  include/policy/PolicyPatch.h
  include/policy/PolicySnapshot.h
  include/plugin/PluginCatalog.h
  include/plugin/PluginDescriptor.h
  include/plugin/PluginErrorCode.h
  include/plugin/IPluginManager.h
  include/plugin/IPluginPolicyGate.h
)

set(DASALL_INFRA_AUDIT_PUBLIC_HEADERS
  include/audit/AuditTypes.h
  include/audit/AuditExporterTypes.h
  include/audit/AuditErrors.h
  include/audit/IAuditHealthProbe.h
  include/audit/AuditService.h
  include/audit/IAuditLogger.h
)

add_library(dasall_infra STATIC)

target_sources(dasall_infra
  PRIVATE
    ${DASALL_INFRA_CORE_SOURCES}
    ${DASALL_INFRA_AUDIT_SOURCES}
    ${DASALL_INFRA_HEALTH_SOURCES}
    ${DASALL_INFRA_HEALTH_PRIVATE_HEADERS}
    ${DASALL_INFRA_LOGGING_SOURCES}
    ${DASALL_INFRA_POLICY_SOURCES}
    ${DASALL_INFRA_POLICY_PRIVATE_HEADERS}
    ${DASALL_INFRA_DIAGNOSTICS_SOURCES}
    ${DASALL_INFRA_DIAGNOSTICS_PRIVATE_HEADERS}
    ${DASALL_INFRA_SECRET_SOURCES}
    ${DASALL_INFRA_SECRET_PRIVATE_HEADERS}
    ${DASALL_INFRA_METRICS_SOURCES}
    ${DASALL_INFRA_METRICS_PRIVATE_HEADERS}
    ${DASALL_INFRA_TRACING_SOURCES}
)

set_target_properties(dasall_infra PROPERTIES
  PUBLIC_HEADER "${DASALL_INFRA_PUBLIC_HEADERS};${DASALL_INFRA_AUDIT_PUBLIC_HEADERS}"
)

target_compile_features(dasall_infra PUBLIC cxx_std_20)

target_include_directories(dasall_infra
  PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/include
  PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/src
)

target_link_libraries(dasall_infra
  PUBLIC
    dasall_contracts
)

dasall_apply_common_options(dasall_infra)
